# resume

./: .gitignore  Cargo.toml  README.md  flake.nix  resume.tex
.github/workflows/: main.yml  pdf.yml  website.yml
config/: resume.dhall  resume.json
src/: lib.rs  main.rs
templates/: resume.tex
