[package]
name = "resume"
version = "0.1.0"
authors = ["gapuchi <arjun.adhia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_dhall = "0.10.1"
serde_json = "1.0.61"
tera = "1.6.1"
tokio = { version = "0.2", features = ["full"] }
